--- a/Final_Project_ML_Preprocessing.ipynb
+++ b/Final_Project_ML_Preprocessing.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "metadata": {
         "id": "P_3-dQfOTl8I"
       },
@@ -68,7 +68,7 @@
         "id": "QTBZ5As4o4PR",
         "outputId": "4730078a-517b-46c3-d622-650e8087747e"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "id": "G4uo5kWXpRFl",
         "outputId": "d1dd63a4-ecff-4062-a5df-1d2391766de2"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,7 +110,7 @@
       "metadata": {
         "id": "kxqWUzxfT2mF"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
       "metadata": {
         "id": "KEkw4RRogi5U"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
         },
         "outputId": "33377625-3d13-4dca-e3da-617272107cfb"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "1_wuY_4aFLqc",
         "outputId": "124f0d9c-624b-4406-dfb7-27bab2dc6f53"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -311,7 +311,7 @@
         "id": "bXkWPp673Tnd",
         "outputId": "52c271f4-34f8-41fc-fb36-7671678c55bd"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -364,7 +364,7 @@
         "id": "PZAiJKYq6Xep",
         "outputId": "4781354d-da8f-46d5-ffff-3b38e5ee40fb"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -387,7 +387,7 @@
       "metadata": {
         "id": "bcCfRPHY4JWu"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,7 +404,7 @@
         "id": "vIq9NmyK4m-R",
         "outputId": "6658db67-3e78-4db5-dd7a-268de262e956"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
         "id": "n-eGXdz36llN",
         "outputId": "97d7e501-eb6b-42f4-d543-0e6b9ecfcedf"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -500,7 +500,7 @@
         "id": "i7jitWcS-XLL",
         "outputId": "f15bbf12-bbbe-4106-f892-52f766e63a6f"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
         "id": "Li9vG4YoqD5E",
         "outputId": "6ede499e-4017-4ffc-9546-2fdaec711d1a"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,7 +600,7 @@
       "metadata": {
         "id": "zGIHBn_7njZm"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -636,7 +636,7 @@
         "id": "qm5PhkpUjjnS",
         "outputId": "970b889e-3ec8-4c18-b08a-4aa11ecd72c4"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -686,7 +686,7 @@
         "id": "UJrjKQjbH23h",
         "outputId": "e8204d2b-939e-400d-d823-5e73857c99f3"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
         "id": "maKjZFi4dEB5",
         "outputId": "a726a135-065b-497e-9d10-db158e7fd554"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -782,7 +782,7 @@
       "metadata": {
         "id": "w3pLHO1EUcLL"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -800,7 +800,7 @@
       "metadata": {
         "id": "IKVgoSbSXFUv"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -834,7 +834,7 @@
         "id": "t2NdgIU5m3kg",
         "outputId": "6f60ff42-4fad-4030-bbc4-8975eb872728"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +913,7 @@
         "id": "HHfLuEI9mgqK",
         "outputId": "dcd5a0c7-4d56-4b2d-fbe4-c4f6363c4010"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -966,7 +966,7 @@
         "id": "DGIMeBikY-a-",
         "outputId": "4d216930-2aeb-421f-d154-427a8562c9d5"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -996,7 +996,7 @@
         "id": "2gXsi93RNK5E",
         "outputId": "22c16545-b531-46b4-db8d-2a398007abb8"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,7 +1015,7 @@
         "\n",
         "# Fit the PCA model to the training data and transform the data\n",
         "X_train_pca = pca.fit_transform(X_train)\n",
-        "\n",
+        "X_train_reconstructed = pca.inverse_transform(X_train_pca)\n",
         "# Print the explained variance ratio and the total variance explained\n",
         "print(\"Explained variance ratio:\", pca.explained_variance_ratio_)\n",
         "print(\"Total variance explained:\", sum(pca.explained_variance_ratio_))"
@@ -1025,9 +1025,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hu94L08-NPVv",
-        "outputId": "9ba23959-d558-4ae5-e12d-7810e38a6a26"
+        "outputId": "364facb5-be53-4693-b649-9a16cb70dfd3"
       },
-      "execution_count": 91,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,224 +1096,22 @@
       "metadata": {
         "id": "zIGQvB_WVuw2"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# This code saves the preprocessed train, test, and validation datasets as CSV files.\n",
-        "from google.colab import files\n",
         "train_df.to_csv('train_df.csv', index = False, encoding = 'utf-8-sig')\n",
-        "files.download('train_df.csv')\n",
         "test_df.to_csv('test_df.csv', index = False, encoding = 'utf-8-sig')\n",
-        "files.download('test_df.csv')\n",
-        "valid_df.to_csv('valid_df.csv', index = False, encoding = 'utf-8-sig')\n",
-        "files.download('valid_df.csv')"
+        "valid_df.to_csv('valid_df.csv', index = False, encoding = 'utf-8-sig')"
       ],
       "metadata": {
-        "id": "3fwARznbY_83",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "097795e2-7974-4b06-ec21-af21a992da4f"
+        "id": "3fwARznbY_83"
       },
-      "execution_count": 99,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_de724cc7-f661-4846-a445-929f559988df\", \"train_df.csv\", 39191054)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_e9c729e6-8881-4491-a609-f5687c509880\", \"test_df.csv\", 4626656)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_fcdd794b-f2aa-4434-bfad-6552667d5037\", \"valid_df.csv\", 4626914)"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
